Added basic functionality: GameService and HttpClient to pull the profiles information and store it to cache.

--- a/NameGame.API/appsettings.json
+++ b/NameGame.API/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WillowTreeUrl": "https://www.willowtreeapps.com"
 }
