Added a DB layer with the initial migration script. Changed the answer validation process to compare the result with the DB instead of cache.

--- a/NameGame.API/appsettings.json
+++ b/NameGame.API/appsettings.json
@@ -12,5 +12,8 @@
     ]
   },
   "AllowedHosts": "*",
-  "WillowTreeUrl": "https://www.willowtreeapps.com"
+  "WillowTreeUrl": "https://www.willowtreeapps.com",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=NameGame.db"
+  }
 }
