Added the reverse mode. Added a few statistics methods.

--- a/NameGame.Tests/NameGame.Tests.csproj
+++ b/NameGame.Tests/NameGame.Tests.csproj
@@ -24,4 +24,9 @@
     <ProjectReference Include="..\NameGame.Service\NameGame.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
