Slugify and flatten urls. Added a new controller to represent the challenge as a resource. Updated the postman collection.

--- a/NameGame.API/appsettings.json
+++ b/NameGame.API/appsettings.json
@@ -14,6 +14,6 @@
   "AllowedHosts": "*",
   "WillowTreeUrl": "https://www.willowtreeapps.com",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=NameGame.db"
+    "DefaultConnection": "Data Source=namegame.db"
   }
 }
