Updated to dotnet 5 and applied .editorconfig.

--- a/NameGame.API/appsettings.Development.json
+++ b/NameGame.API/appsettings.Development.json
@@ -4,6 +4,12 @@
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
+    },
+    "Console": {
+      "IncludeScopes": true,
+      "LogLevel": {
+        "Default": "Information"
+      }
     }
   }
 }
