--- a/NameGame.API/appsettings.json
+++ b/NameGame.API/appsettings.json
@@ -1,15 +1,10 @@
 {
-  "Serilog": {
-    "MinimumLevel": "Information",
-    "WriteTo": [
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Logs\\namegame.log",
-          "rollingInterval": "Day"
-        }
-      }
-    ]
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
   },
   "AllowedHosts": "*",
   "WillowTreeUrl": "https://www.willowtreeapps.com",
