--- a/NameGame.API/Properties/launchSettings.json
+++ b/NameGame.API/Properties/launchSettings.json
@@ -1,7 +1,7 @@
 {
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "NameGame.API": {
+    "NameGame": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
