Changed the URL to the list of the employees.

--- a/NameGame.Api/appsettings.json
+++ b/NameGame.Api/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "WillowTreeUrl": "https://www.willowtreeapps.com",
+  "WillowTreeUrl": "https://namegame.willowtreeapps.com",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=namegame.db"
   }
